tests/fixtures/invalid/max_bool_list.py
# Cannot call max() with Bool, List[int]
x = max(True, [1, 2, 3])
